@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("AA-123456", "Petr Arsentev", "eDer3432f"),
                 new Account("AA-345678", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("AA-123456", "Petr Arsentev", "eDer3432f"),
                         new Account("AA-345678", "Petr Arsentev", "000001")
                 )
@@ -28,13 +28,13 @@ public class NotifyAccountTest {
 
     @Test
     public void sentWithDuplicates() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("AA-123456", "Petr Arsentev", "000001"),
                 new Account("AA-123456", "Petr Arsentev", "000002"),
                 new Account("AA-888888", "Ivan Ivanov", "000098")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("AA-123456", "Petr Arsentev", "000001"),
                         new Account("AA-888888", "Ivan Ivanov", "000098")
                 )
